// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should have a class if the message was made by the Watson API 1`] = `
<section
  className="message watson"
>
  <p />
</section>
`;

exports[`Message should match the snapshot if the message is made by the user 1`] = `
<section
  className="message"
>
  <p />
</section>
`;
